test/files/events-exp-lang-neg/computations-in-parameterlist.check
computations-in-parameterlist.scala:6: error: Args contains wrong Tree
  evt e2(a: Int, b: Int) = e1(a+b, b)
                               ^
error: inferred type arguments [(Int, Int),(Int, Int),Int] do not conform to method map's type parameter bounds [U,S >: (Int, Int),V >: S]
two errors found
